side results bar ready, navigation covered

--- a/src/b2bleadsTry/NavigationComponent/navigationComponent1.css
+++ b/src/b2bleadsTry/NavigationComponent/navigationComponent1.css
@@ -1,119 +1,127 @@
-.navigation-top-container{
-    height: 90px;
-    //background-image: linear-gradient(to right, #E61575 , #2B3079); 
-    background-color:inherit;
-    padding-right:40px;
-    //position:inherit;
-    display: flex;
-    flex-direction: row;
-    //width :100%;
-    
-} 
-@media screen and (max-width:993px){
-    .logo-container{
-        margin-left:0px !important;
-    }
-    li {
-        float: right;
-        max-width: 80px;
-        margin-left:10px;
-    
-    }
+.navigation-top-container {
+  height: 90px;
+  //background-image: linear-gradient(to right, #E61575 , #2B3079);
+  background-color: inherit;
+  //position:inherit;
+  display: flex;
+  flex-direction: row;
+  //width :100%;
 }
-.logo-container{
-    flex:1;
-    height: 90px;
-    //max-width:100px;
-    //padding-left:40px;
-    //margin-top: 10px;
-    align-items: center;
-    justify-content: flex-start;
-    display:flex;
-    padding-top: 20px;
-    //margin-left: 100px;
-    
+.navigation-bottom-shadow {
+    -webkit-box-shadow: 0px 7px 12px -10px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 7px 12px -10px rgba(0,0,0,0.75);
+    box-shadow: 0px 7px 12px -10px rgba(0,0,0,0.75);
 }
-.navigation-buttons-container{
-    flex:2;
-    height: 90px;
-    
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    flex-direction: row;
+@media screen and (max-width: 993px) {
+  .logo-container {
+    margin-left: 0px !important;
+  }
+  li {
+    float: right;
+    max-width: 80px;
+    margin-left: 10px;
+  }
 }
-.navigation-with-button-container{
-    flex:4;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
+.logo-container {
+  flex: 1;
+  height: 90px;
+  align-items: center;
+  justify-content: flex-start;
+  display: flex;
+}
+.navigation-single-button {
+ 
+  text-align: center;
+}
+.navigation-single-button-download {
+    text-align: center;
+  border-style: none;
+  background-color: #fcbd17;
+  border-radius: 20px;
+  align-self: center;
+}
+.navigation-single-button-download:focus {
+  outline: 0 !important;
+}
+.navigation-buttons-container {
+  flex: 2;
+  display: flex;
+  height: 90px;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-direction: row;
+}
+.navigation-with-button-container {
+  flex: 1;
+  margin-left: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
 ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-   
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
-  
+
 li {
-    float: right;
-    max-width: 100px;
-    margin-left:40px;
-
-}
-  
-li a {
-    display: block;
-    text-align: center;
-    padding: 14px 16px;
-    //color:  #E61575 ;
-    color:gray;
-    text-decoration: none;
-    font-weight: 500;
-    font-family: Gilmer-Regular;
-    font-size: 18px;
-
-}
-.download-navigation-button{
-    border-radius: 50px;
-    height: 50px;
-    background-color: #FCBD17;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  float: right;
+  max-width: 100px;
+  margin-left: 40px;
 }
 
+.navigation-div-text {
+  text-align: center;
+  padding: 14px 16px;
+  /* color:  #E61575 ; */
+  color: black;
+  text-decoration: none;
+  font-weight: 575;
+  font-family: Gilmer-Regular;
+  font-size: 18px;
+}
+.download-navigation-button {
+  border-radius: 10px;
+  height: 50px;
+  background-color: #fcbd17;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-@media screen and (max-width: 711px){
-    li a{
-        font-size: 13px;
-
-    }
+@media screen and (max-width: 711px) {
+  li a {
+    font-size: 13px;
+  }
 }
 li a:hover {
-    color: #E61575;
-    text-decoration: none;
+  color: #e61575;
+  text-decoration: none;
 }
-.icon-bars{
-    color:#E61575;
-    font-size: 25px;
+.icon-bars {
+  color: #e61575;
+  font-size: 25px;
 }
-.navigation-main-button-container{
-    position:absolute;
-    z-index: 2000;
-    margin-right: 0px;
+.navigation-main-button-container {
+  position: absolute;
+  z-index: 2000;
+  margin-right: 0px;
 }
-.navigation-dropdown-menu{
-    position: relative;
-    z-index: 10000;
-    background-color: white;
-    display:flex;
-    flex-direction: column-reverse;
-    
-    height:200px;
-    width:100px;
-    margin-top:280px;
-    margin-right: -40px;
-    padding-right: 0;
+.navigation-dropdown-menu {
+  position: absolute;
+  z-index: 10000;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: fit-content;
+  margin-top: 110px;
+  margin-right: 0px;
+  padding-right: 0;
+  padding:10px;
+  -webkit-box-shadow: 2px 10px 12px -5px rgba(0,0,0,0.75);
+  -moz-box-shadow: 2px 10px 12px -5px rgba(0,0,0,0.75);
+  box-shadow: 2px 10px 12px -5px rgba(0,0,0,0.75);
 }
