--- a/src/b2bleadsTry/ResultsColumn/resultsColumn.css
+++ b/src/b2bleadsTry/ResultsColumn/resultsColumn.css
@@ -64,13 +64,17 @@
 
 .other-params-text{
     font-family: Gilmer-Regular;
-    color:rgb(252,189,23);
+    display: block;
+    color:#000;
     font-size:13px;
 }
 .other-params-data-text{
-    font-family: Gilmer-Regularf;
-    color: white;
+    display: block;
+
+    font-family: Gilmer-Regular;
+    color: #000;
     font-size:13px;
+    font-weight: 600;
 }
 .filters-header{
     font-family: Gilmer-Regular;
@@ -86,14 +90,19 @@
 }
 
 .count-of-other-data{
-    border-color: white;
-    border-width:1px;
-    border-style:solid;
-    border-radius:10px;
-    background-color:#2B3079;
     display:flex;
     align-items:flex-start;
     justify-content:center;
-    margin-top:10px;
-    padding:10px;
+    margin-top:20px;
+    border-radius: 7px;
+    margin-left: 10px;
+    //padding:40px;
+    padding-top:0px;
+    //background-image: linear-gradient(to right, #E61575  , #2B3079 )    ;
+    //background-color: #4A52BF;
+    //background-color:#0091ea;
+    background-color:  rgba(43,48,121,0.0);
+    -webkit-box-shadow: -1px -1px 6px 2px rgba(181,179,181,0.53);
+    -moz-box-shadow: -1px -1px 6px 2px rgba(181,179,181,0.53);
+    box-shadow: -1px -1px 6px 2px rgba(181,179,181,0.53);
 }
