--- a/src/b2bleadsTry/ResultsColumn/resultsColumn.css
+++ b/src/b2bleadsTry/ResultsColumn/resultsColumn.css
@@ -26,7 +26,7 @@
     -webkit-box-shadow: -1px -1px 6px 2px rgba(181,179,181,0.53);
     -moz-box-shadow: -1px -1px 6px 2px rgba(181,179,181,0.53);
     box-shadow: -1px -1px 6px 2px rgba(181,179,181,0.53);
-    margin-top:0;
+    margin-top:20px;
     margin-bottom:10px;
 }
 .locations-container{
