--- a/src/b2bleadsTry/NavigationComponent/navigationComponent1.css
+++ b/src/b2bleadsTry/NavigationComponent/navigationComponent1.css
@@ -80,6 +80,7 @@ li {
   font-weight: 575;
   font-family: Gilmer-Regular;
   font-size: 18px;
+  text-decoration: underline;
 }
 .download-navigation-button {
   border-radius: 10px;
@@ -90,9 +91,20 @@ li {
   justify-content: center;
 }
 
-@media screen and (max-width: 711px) {
+@media screen and (max-width: 796px) {
   li a {
     font-size: 13px;
+  }
+  .navigation-div-text {
+    text-align: center;
+    padding: 14px 16px;
+    /* color:  #E61575 ; */
+    color: black;
+    text-decoration: none;
+    font-weight: 575;
+    font-family: Gilmer-Regular;
+    font-size: 14px;
+    text-decoration: underline;
   }
 }
 li a:hover {
