--- a/src/b2bleadsTry/AskedQuestionsComponent/askedQuestionsComponent.css
+++ b/src/b2bleadsTry/AskedQuestionsComponent/askedQuestionsComponent.css
@@ -29,7 +29,7 @@
 .answer-text{
     padding:0px;  
     font-family: Gilmer-Regular;
-    font-size: 1.8vh;
+    font-size: 16px;
     margin-bottom: 2vh;
     //margin-right:2vw;
     color:#313335;
