--- a/src/b2bleadsTry/ContactUsComponent/contactUsComponent.css
+++ b/src/b2bleadsTry/ContactUsComponent/contactUsComponent.css
@@ -21,7 +21,7 @@
 .question-text{
     padding:0.5vh 0px;  
     font-family: Gilmer-Regular;
-    font-size: 1.9vh;
+    font-size: 16px;
     //margin-left:2vw;
     color:#2B3079;
     font-weight: 700;
@@ -29,7 +29,7 @@
 .answer-text{
     padding:0px;  
     font-family: Gilmer-Regular;
-    font-size: 1.8vh;
+    font-size: 16px;
     margin-bottom: 2vh;
     //margin-right:2vw;
     color:#313335;
